--- a/views/category/category.ejs
+++ b/views/category/category.ejs
@@ -43,7 +43,9 @@
           Close
         </button>
         <button type="button" id="updateBtn" class="btn btn-outline-inventory">
-          Update
+          <span id="btn-label-modal">Update</span>
+          <span id="btnSpinner-modal" class="spinner-border spinner-border-sm d-none" role="status"
+            aria-hidden="true"></span>
         </button>
       </div>
     </div>
@@ -72,8 +74,9 @@
             </div>
             <div class="col-md-3 md-text-right">
               <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-50">
-                <i class="fa fa-plus" aria-hidden="true"></i>
-                Add
+                <span id="btnIcon"><i class="fa fa-plus" aria-hidden="true"></i> Add</span>
+                <span id="btnSpinner" class="spinner-border spinner-border-sm d-none" role="status"
+                  aria-hidden="true"></span>
               </button>
             </div>
           </div>
